# when testing compile speed is the most important
[profile.test]
opt-level = 0

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# keeps debug binaries from exceeding /tmp limits during doctest linking
split-debuginfo = "unpacked"

# Enable high optimizations for dependencies (incl. Bevy) which do not change often
# but not for our code which takes longer to rebuild:
[profile.dev.package."*"]
opt-level = 3

# Workaround: the current nightly rustc ICEs optimizing `bevy_color 0.19`'s derived
# `Deserialize` (eg `oklaba::visit_seq`) at opt-level 3. Drop it a notch in every
# profile until the toolchain is fixed; color math is not hot for beet servers, and
# this keeps `cargo test`/`build` and the release container build from crashing.
# [profile.dev.package.bevy_color]
# opt-level = 1
# [profile.test.package.bevy_color]
# opt-level = 1
# [profile.release.package.bevy_color]
# opt-level = 1

# Size-minimal profile for the wasm Cloudflare Worker build: optimize for size
# (`z`), fat LTO and a single codegen unit to let the linker drop dead code, abort
# on panic (no unwinding tables), and strip symbols. Used as:
#   cargo build --target wasm32-unknown-unknown -p beet-cli --lib \
#     --no-default-features --features cloudflare --profile wasm-release
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.package]
version = "0.0.9-dev.16"
authors = ["Pete Hayman"]
edition = "2024"
description = "A malleable tool engine"
documentation = "https://docs.rs/beet"
readme = "README.md"
homepage = "https://beet.org"
repository = "https://github.com/mrchantey/beet"
license = "MIT OR Apache-2.0"
keywords = ["malleable-software", "local-first", "cross-platform", "framework", "robotics"]
categories = [
	"science::robotics",
	"game-development",
	"simulation",
	"wasm",
	"embedded",
]
publish = false

[workspace]
# default resolver
resolver = "2"

exclude = [
	"infra",
	"bevy"
]

members = [

	## 💡 Core
	"crates/beet_async",
	"crates/beet_core",
	"crates/beet_core/macros",
	"crates/beet_core/shared",
	"crates/beet_infra",
	"crates/beet_net",
	"crates/beet_ui",
	"crates/beet_router",
	"crates/beet_thread",
	"crates/beet_action",

	## 💡 Flow
	"crates/beet_extra",
	# "crates/beet_flow",
	"crates/beet_ml",
	"crates/beet_spatial",

	## 💡 Beet
	"examples/rsx_site",
	"crates/beet-cli",
]

[workspace.dependencies]
## internal

beet = { path = "", version = "0.0.9-dev.16" }
beet_thread = { path = "crates/beet_thread", version = "0.0.9-dev.16" }
beet_core_macros = { path = "crates/beet_core/macros", version = "0.0.9-dev.16" }
beet_core_shared = { path = "crates/beet_core/shared", version = "0.0.9-dev.16" }
# no_std by default; std-only consumers add `features = ["std"]`.
beet_core = { path = "crates/beet_core", version = "0.0.9-dev.16", default-features = false }
# vendored bevy_async bridge; no_std by default, std consumers add `features = ["std"]`.
beet_async = { path = "crates/beet_async", version = "0.0.9-dev.16", default-features = false }
beet_infra = { path = "crates/beet_infra", version = "0.0.9-dev.16" }
# no_std by default (the `types/` wire types); std-only consumers add
# `features = ["std", "serde", "fs", "http"]`.
beet_net = { path = "crates/beet_net", version = "0.0.9-dev.16", default-features = false }
beet_ui = { path = "crates/beet_ui", version = "0.0.9-dev.16" }
beet_router = { path = "crates/beet_router", version = "0.0.9-dev.16" }
beet_action = { path = "crates/beet_action", version = "0.0.9-dev.16", default-features = false }

# beet_flow = { path = "crates/beet_flow", version = "0.0.9-dev.16" }
beet_spatial = { path = "crates/beet_spatial", version = "0.0.9-dev.16", default-features = false }
beet_ml = { path = "crates/beet_ml", version = "0.0.9-dev.16" }
beet_extra = { path = "crates/beet_extra", version = "0.0.9-dev.16" }

#💡 local
# bevy_ecs = {version = "0.19", default-features = false, features = ["backtrace"]}
# std / bevy_log / debug are NOT forced here so that no_std consumers (e.g. the
# esp32 firmware) can depend on a bare bevy. They are re-enabled for normal
# builds via `beet_core/std`, which every std beet crate pulls transitively.
bevy = { version = "0.19", default-features = false, features = [
	# for most oneshot apps multi-threaded coldstart is much slower than
	# any potential performance gain, even more prominent for linear pipelines
	# "multi_threaded",
	# doesnt seem accurate, lists despawn location as spawn location
	# "track_location",
	# "keyboard",
] }
bevy_reflect = { version = "0.19", default-features = false, features = ["smol_str"] }

#💡 utility
# default-features disabled so beet_core can build no_std; std consumers get the
# std bits back transitively via `beet_core/std`.
bitflags = "2"
thiserror = { version = "2", default-features = false }
heck = "0.5"
dotenv = "0.15"
send_wrapper = { version = "0.6", features = ["futures"] }
inventory = "0.3"
# Link-section test registration for bare-metal targets, where `inventory`'s
# life-before-main ctors never run (xtensa-lx-rt does not walk `.init_array`).
# Used by `beet_core/testing_embedded`; kept off the wasm build (unsupported).
linkme = "0.3"
# no_std interrupt-free critical sections; backs the embedded test runner's
# single-cell async-test registration. The impl is supplied by the target
# (eg esp-hal), beet_core only takes the `Mutex`/`with` API.
critical-section = "1"
itertools = { version = "0.14", default-features = false }
# default-features off (drops `std`) so dependents can compile on no_std;
# std consumers re-add `uuid/std`. `js`/`rng-getrandom` backends are opt-in per crate.
uuid = { version = "1", default-features = false }
chrono = "0.4"
# default-features off (drops `std`, `std_rng`, `thread_rng`) so dependents can
# compile on no_std; std consumers re-add the relevant features.
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
# wasm_js ignored in native. Backs ahash (via material-colors) and rand 0.9 on
# wasm. uuid uses its own `js` backend, so getrandom 0.4 stays out of the graph.
getrandom = { version = "0.3", features = ["wasm_js"] }
variadics_please = "1"
webbrowser = "1"

#💡 logging
log = "0.4"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pretty_env_logger = "0.4"

#💡 async
futures = "0.3"
# no_std core stream/future traits, used by no_std-capable wire types.
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
futures-lite = { version = "2", default-features = false, features = ["alloc"] }
pin-project = "1"
async-channel = "2"
async-executor = "1"
async-fs = "2"
async-io = "2"
futures-io = "0.3"
async-lock = "3"
async-process = "2"
async-task = "4"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
russh = { version = "0.60", default-features = false }

#💡 macros

syn = { version = "2", features = [
	"extra-traits",
	"visit",
	# full for syn::pat
	"full",
] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
proc-macro2-diagnostics = "0.10"
prettyplease = "0.2"

#💡 attributes
strum = { version = "0.26", default-features = false, features = ["derive"] }
strum_macros = "0.26"
extend = "1"

#💡 io
libc = "0.2"
bytes = { version = "1", default-features = false }
smol_str = { version = "0.2", default-features = false }
# no_std by default; std consumers re-enable `serde/std` (eg via `beet_core/std`).
serde = { version = "1", default-features = false, features = ["derive"] }
# no_std by default (alloc only); std consumers re-enable `serde_json/std`.
serde_json = { version = "1", default-features = false, features = ["alloc"] }
# std/no_std mode + serde are selected by beet_action's feature flags
# (`rhai` for std scripting, `rhai_no_std` for embedded), so no defaults here.
rhai = { version = "1", default-features = false }
# QuickJS engine via high-level bindings to the bundled C engine. `rust-alloc`
# routes allocation through Rust's global allocator instead of libc's malloc; the
# std vs bare-metal mode is selected on beet_action's `quickjs` feature edge.
rquickjs = { version = "0.12", default-features = false, features = ["rust-alloc"] }
postcard = { version = "1", features = ["alloc"] }
serde_plain = "1"
# no_std by default (alloc only); std consumers re-enable `base64/std`.
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
sha2 = "0.10"
# SHA-1 for the websocket `Sec-WebSocket-Accept` handshake (RFC 6455). no_std by
# default; the digest API works on alloc, so consumers need not re-enable `std`.
sha1 = { version = "0.10", default-features = false }
ron = "0.8"
toml = "0.8"

#💡 http
http = "1"
http-body-util = "0.1"
url = "2"

#💡 tui
vte = "0.15.0"
termion = { version = "4" }
crossterm = { version = "0.29" }

#💡 web
js-sys = "0.3"
# lock to the same version as the cli
wasm-bindgen = "=0.2.125"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
# https://github.com/wasm-bindgen/wasm-bindgen/blob/215b914c739c598e5c076f8ed22df20d2c77a3dd/crates/web-sys/Cargo.toml#L45
web-sys = "0.3"
# Cloudflare Workers SDK (workers-rs): the `R2WorkersStore` backend and the
# `#[event(fetch)]` Worker entry. wasm32-only, referenced under each crate's
# wasm target table behind the `cloudflare` feature.
worker = "0.8"

[package]
name = "beet"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

include = ["CHANGELOG.md", "README.md", "/src", "/examples", "/scenes"]

[features]
# default = ["stack"]
default = ["std", "ui"]

# Standard library support (enabled by default). no_std consumers depend on beet
# with `default-features = false`.
std = ["beet_core/std", "beet_action?/std", "beet_net?/std", "beet_spatial?/std"]
# Minimal no_std build for bare-metal targets (e.g. esp32 firmware): the libm /
# critical-section shims, no ui/net/action/etc. Capabilities are opt-in.
embedded = ["beet_core/embedded"]
# The no_std BSX parser/build runtime (eg parsing a `.bsx` scene pushed to esp
# firmware). Forwards `beet_core`'s parser only, not `beet_router/bsx` (the std +
# `beet_ui` rendering path).
bsx = ["beet_core/bsx"]
# The `#[template]`/`rsx!` proc-macros (compile-time only, no_std-safe).
rsx = ["beet_core/rsx"]
# Bevy colour types (`Color`, `Srgba`, …) plus beet's `ColorExt`.
bevy_color = ["beet_core/bevy_color"]

# 💡 Top Level

# The `beet_extra` example capabilities, added to `BeetPlugins` as `BeetExtraPlugin`
# (which self-selects the spatial/thread/infra example sets by `beet_extra`
# sub-feature). A consumer turns on this plus the relevant `beet_extra/*` sub-features
# (eg `beet_extra/thread`), and `BeetPlugins` wires the example plugin in.
extra = ["dep:beet_extra"]
http_server = ["net", "action","router", "beet_net/server", "beet_router?/http"]
# The server-to-client websocket channel and the dev-mode live reload watcher.
client_io = ["http_server", "tungstenite", "beet_router?/client_io"]
# `beet_ui/net` lets the live TUI fetch remote `<img>` rasters (kitty
# graphics); the host app supplies the HTTP transport (eg `ureq` + a TLS).
tui_server = ["tui","router", "markdown", "beet_router?/tui", "beet_ui?/net"]

# 💡 Core

serde = ["beet_core/serde", "beet_action?/serde", "beet_net?/serde", "beet_router?/serde"]
nightly = ["beet_core/nightly"]
rand = ["beet_core/rand"]
json = ["serde", "beet_core/json", "beet_net?/json", "beet_router?/json"]
postcard = ["serde", "beet_core/postcard", "beet_net?/postcard"]
# RON text format for `MediaType::Ron` and `template_serde` loading.
ron = ["serde", "beet_core/ron"]
# Plaintext (de)serialization for `MediaType::Text`.
serde_plain = ["serde", "beet_core/serde_plain"]
testing = ["beet_core/testing"]
# no_std test runner for bare-metal consumers (eg the esp32 firmware): the beet
# harness registering via `linkme` instead of `inventory`. See `beet_core`.
testing_embedded = ["beet_core/testing_embedded"]
# The nightly `custom_test_frameworks` test-runner path (libtest harness). Stable
# builds use the default `inventory` runner.
custom_test_frameworks = ["beet_core/custom_test_frameworks"]
fs = ["beet_core/fs","beet_net?/fs"]
bevy_default = [
	"bevy/default",
	"beet_core/bevy_default",
	"beet_extra?/bevy_default",
	"beet_spatial?/bevy_default",
]
# Link bevy's full `DefaultPlugins` (winit + wgpu + windowing) and make
# `BeetPlugins` select the winit event-loop runner instead of the headless 30Hz
# schedule loop, opening a default window. (Override the `WindowPlugin` to boot
# windowless and open the window from data.) Off by default, so the CLI stays headless.
winit = ["bevy_default"]
template_serde = ["beet_core/template_serde", "beet_net?/template_serde", "beet_router?/template_serde", "beet_thread?/template_serde"]
bevy_reflect_documentation = ["beet_core/bevy_reflect_documentation", "beet_action?/reflect", "beet_net?/bevy_reflect_documentation"]
bevy_keyboard = ["beet_core/bevy_keyboard"]
bevy_mouse = ["beet_core/bevy_mouse"]
bevy_multithreaded = ["beet_core/bevy_multithreaded", "beet_net?/bevy_multithreaded"]

# 💡 Net

# Note: `net` deliberately does NOT enable `beet_router/http` — that would pull
# beet_router's std HTTP-server surface, which a no_std consumer (`router_embedded`)
# must avoid. The std `router`/`http_server` features re-add it explicitly.
net = ["dep:beet_net"]
# The agnostic mDNS service browser engine + pure wire helpers (no_std). esp
# enables this for the browser and supplies its own `edge-nal`-backed UDP socket
# impl; on a host, pair with `udp` to get the std `async-io` socket driver.
mdns = ["net", "beet_net/mdns"]
# The std impl of beet_net's trait-only UDP socket seam over `async-io` (the
# `UdpEndpoint`/`UdpSocket` trait itself is in `net`, always no_std). Needed by
# the std mDNS browser driver `run_mdns_browser`.
udp = ["net", "beet_net/udp"]
native-tls = [
"net", "beet_net/native-tls",
]
# beet_net is a hard dependency of beet_router. The facade pins beet_router to
# `default-features = false`, so the std router must re-enable the std + markdown
# + http surface it relied on (previously supplied by default features + net).
# `beet_router/native` adds the filesystem store + http transport + browser opener.
router = ["template", "action", "net", "dep:beet_router", "beet_router/std", "beet_router/native", "beet_router/markdown", "beet_router/http", "beet_infra?/beet_router"]
# The portable render router: the route tree, scene rendering, media negotiation
# and the runtime BSX parser (`beet_router/std`, which is now wasm-safe), without
# the native-only `beet_router/native` surface (filesystem store, http transport,
# server). Builds on wasm — the basis of the Cloudflare Worker target. Native
# consumers use the full `router` instead.
router_render = ["template", "action", "net", "dep:beet_router", "beet_router/std", "beet_router/markdown"]
# no_std router for bare-metal targets (e.g. esp32 firmware): the route tree,
# dispatch and middleware core from beet_router, without the std scene/help
# rendering pipeline. See `beet_router`'s `embedded` module.
router_embedded = ["action", "net", "dep:beet_router"]
# The Cloudflare Worker target: the portable render router plus the R2 store
# backend, so a wasm `beet-cli` lib loads its site from an R2 bucket and serves
# it through the router. wasm32-only (the `worker` crate is wasm-gated in beet_net).
cloudflare = ["router_render", "json", "markdown", "serde_plain", "beet_net/cloudflare"]
# The browser-wasm base: the minimum any in-browser `beet` binary needs regardless
# of `--no-default-features`. The portable render router (bsx parse + template +
# action runtime) plus media/route output and the ui `style` widgets `<RenderConsole>`
# leans on. Wasm-safe like `cloudflare` (router_render, not the native-fs `router`),
# but without the Worker SDK / R2 store: the program is read from the DOM, not a
# bucket. Built as:
#   cargo build --target wasm32-unknown-unknown -p beet-cli --bin beet \
#     --no-default-features --features web --profile wasm-release
web = ["router_render", "json", "markdown", "serde_plain", "style", "template"]
rustls-tls = [
"net", "beet_net/rustls-tls",
]
lambda = ["rustls-tls", "beet_net?/lambda"]
aws_sdk = ["net", "beet_net?/aws_sdk","beet_infra?/aws_sdk","beet_router?/aws_sdk"]
deploy = ["infra", "beet_infra?/deploy"]
tungstenite = ["net", "beet_net?/tungstenite"]
webdriver = ["net", "beet_net?/webdriver"]
ureq = ["net", "beet_net?/ureq"]
reqwest = ["net", "beet_net?/reqwest"]
hyper = ["net", "beet_net?/hyper"]
_pretty_curl = ["net", "ui", "ureq", "rustls-tls"]
_mini_browser = ["_pretty_curl", "tui", "router", "beet_router?/tui"]
# russh brings its own crypto (ring / aws-lc-rs), so the ssh transport only needs
# a TLS backend for the colocated http client; use rustls so the server binary
# cross-compiles with zigbuild (OpenSSL/native-tls has no cross system library).
ssh_server = ["net", "beet_net?/russh_server", "rustls-tls"]
ssh_client = ["net", "beet_net?/russh_client", "rustls-tls"]
# The multi-tenant SSH-TUI server: serves each SSH connection its own navigable
# terminal, all browsing one router, alongside the http server (`SshTuiServer` +
# `SshTuiPlugin`). Combines the ssh transport with the live TUI render stack.
ssh_tui = ["ssh_server", "tui_server", "beet_router?/ssh"]


# The agent-thread runtime. When `extra` is also on, forwards the example tool
# wiring (`beet_extra/thread`, the `ThreadExamplesPlugin`) plus the QuickJS scripting
# example (`beet_extra/scripting`) so `BeetExtraPlugin` adds them; the `?` keeps them
# inert when `beet_extra` is not a dep.
thread = ["dep:beet_thread","net","action","beet_extra?/thread","beet_extra?/scripting"]


# 💡 Stack

# When beet_net is also present (eg `router_embedded`), turn on its no_std
# action/exchange integration so `exchange_handler` / `AsyncEntity::exchange`
# are available on bare-metal targets too.
action = ["dep:beet_action","beet_ui?/action","beet_net?/action"]
# Engine-agnostic scripting framework (`ScriptLanguage` + dispatch). Pair with a
# backend (eg `rhai`) and `rhai_serde` for a working typed `Script`.
scripting = ["action","beet_action/scripting"]
# The rhai engine, re-exported via `beet::exports::rhai`. Bare engine for
# embedded consumers (no_std, no serde, no router registrations).
rhai = ["action","beet_action/rhai"]
# The typed-`Script` rhai backend: the `Value`-marshalled runtime (itself
# `no_std`) plus the std beet_router scripting registrations. The `std` here is
# for those registrations, not the runtime — embedded consumers take
# `beet_action/rhai_serde` directly without it.
rhai_serde = ["rhai","serde","std","beet_action/rhai_serde","beet_router?/scripting"]
# The QuickJS engine, re-exported via `beet::exports::rquickjs`. Bare engine for
# consumers that marshal values by hand (no serde, no router registrations).
quickjs = ["action","beet_action/quickjs"]
# The typed-`Script` QuickJS backend: the JSON-marshalled runtime plus the std
# beet_router scripting registrations and the `ScriptEntry` entry action (the `std`
# is for those, not the runtime).
quickjs_serde = ["quickjs","serde","std","beet_action/quickjs_serde","beet_router?/quickjs"]
# turning on `ui` also lights up beet_thread's chat UI (`ThreadView`,
# `CreatePostForm`, `ThreadUiPlugin`) when `thread` is present.
ui = ["dep:beet_ui", "beet_thread?/ui"]
# The `beet_ui` function-component widget set (Header, Button, Sidebar, Table)
# and the `rsx!`/`#[template]` lowering runtime. std-only, so it stays opt-in.
template = ["ui", "beet_ui?/template"]
style = ["ui", "beet_ui?/style"]
# Backend-agnostic keyboard input routed to the focused entity (`FocusPlugin`).
keyboard = ["ui", "beet_ui?/keyboard"]
tui = ["ui", "beet_ui?/tui"]
markdown = ["beet_router?/markdown", "beet_router?/markdown_parser", "beet_ui?/markdown_parser"]
# Build-time route code generation (route tree, server/client actions, typed links).
codegen = ["router", "beet_router?/codegen"]
syntax_highlighting = ["ui", "style", "beet_ui?/syntax_highlighting"]

# The infra deploy types (beet_infra). When `extra` is also on, forwards the deploy
# example wiring (`beet_extra/infra`, the `InfraExamplesPlugin` templates) so
# `BeetExtraPlugin` adds it; the `?` keeps it inert when `beet_extra` is not a dep.
infra = ["dep:beet_infra", "beet_extra?/infra"]
lambda_block = ["deploy", "aws_sdk", "bindings_aws_common", "beet_infra?/lambda_block", "fs", "rand"]
lightsail_block = ["deploy", "aws_sdk", "bindings_aws_common", "beet_infra?/lightsail_block", "fs", "rand"]
fargate_block = ["deploy", "aws_sdk", "bindings_aws_common", "beet_infra?/fargate_block", "fs", "rand"]
# The Cloudflare Containers + Workers deploy blocks/actions (wrangler-provisioned,
# so no terraform bindings). The deployed container binary is built as a separate
# `cargo` invocation, so the orchestrator needs no `aws_sdk` itself.
cloudflare_block = ["deploy", "beet_infra?/cloudflare_block", "fs", "rand"]
bindings_aws_common = ["infra","beet_infra?/bindings_aws_common"]
bindings_aws_all = ["infra","beet_infra?/bindings_aws_all"]
bindings_cloudflare_common = ["infra","beet_infra?/bindings_cloudflare_common"]
# Opt-in Cloudflare DNS + load-balancer failover for the AWS blocks (eg a Fargate
# deploy publishing records into a Cloudflare zone); without it the blocks are
# Route53-only and compile no Cloudflare bindings.
cloudflare_dns = ["infra","beet_infra?/cloudflare_dns"]


# the example binaries are all windowed, so `examples` turns on `winit`: `BeetPlugins`
# (with `extra`) then boots a real window and adds `BeetExtraPlugin`, no per-example
# runner wiring.
examples = ["bevy_default", "winit", "spatial", "extra", "beet_extra?/bevy_default"]
ml = ["spatial", "dep:beet_ml", "beet_extra?/ml"]
cuda = ["ml", "beet_ml/cuda"]
# flow = ["dep:beet_flow"]
# 💡 Server

spatial = ["action", "dep:beet_spatial"]
# template_serde = ["beet_core/template_serde"]

# animation = ["beet_spatial?/animation"]
# assets = ["beet_spatial?/assets"]
# ui = ["beet_spatial?/ui"]
# reflect = ["beet_flow/reflect"]
# dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }

beet_core = { workspace = true }
beet_infra = { workspace = true, optional = true }
beet_thread = { workspace = true, optional = true }
beet_net = { workspace = true, optional = true }
beet_ui = { workspace = true, optional = true }
# Declared explicitly (not via `workspace = true`) so the facade can set
# `default-features = false`: no_std consumers (`router_embedded`) get the no_std
# core; the std `router` feature re-adds `beet_router/std` (+ markdown + http).
beet_router = { path = "crates/beet_router", version = "0.0.9-dev.16", optional = true, default-features = false }
beet_action = { workspace = true, optional = true }

#💡 flow
# beet_flow = { workspace = true, optional = true }
beet_ml = { workspace = true, optional = true }
beet_spatial = { workspace = true, optional = true }

beet_extra = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# pins uuid's wasm RNG to its `js` (WebCrypto) backend; `rng-getrandom` would
# drag in getrandom 0.4, whose wasm marshalling traps the test runner.
uuid = { workspace = true, features = ["std", "js"] }

[dev-dependencies]
beet = { path = "." }
# beet = { path = "", features = ["launch", "server_app", "client", "rand"] }
# bevy.workspace = true
# bevy = { workspace = true, default_features = true }
serde.workspace = true
serde_json.workspace = true
async-executor.workspace = true
futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
beet = { path = ".", features = ["fs"] }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook.workspace = true
web-sys.workspace = true

# 💡 Examples - Net

[[example]]
name = "http_client"
path = "examples/net/http_client.rs"
required-features = ["net", "ureq", "native-tls"]

[[example]]
name = "http_server"
path = "examples/net/http_server.rs"
required-features = ["http_server"]

[[example]]
name = "socket_client"
path = "examples/net/socket_client.rs"
required-features = ["tungstenite", "json"]

[[example]]
name = "socket_server"
path = "examples/net/socket_server.rs"
required-features = ["tungstenite", "action"]

[[example]]
name = "templating"
path = "examples/net/templating.rs"
required-features = ["http_server"]

[[example]]
name = "webdriver"
path = "examples/net/webdriver.rs"
required-features = ["webdriver"]

[[example]]
name = "ssh_server"
path = "examples/net/ssh_server.rs"
required-features = ["ssh_server"]

[[example]]
name = "ssh_client"
path = "examples/net/ssh_client.rs"
required-features = ["ssh_client"]

[[example]]
name = "ssh_tui"
path = "examples/ui/ssh_tui.rs"
required-features = ["ssh_server", "tui"]

[[example]]
name = "ssh_tui_site"
path = "examples/ui/ssh_tui_site.rs"
required-features = ["ssh_tui", "http_server", "markdown"]

[[example]]
name = "ssh_stress"
path = "examples/ui/ssh_stress.rs"
required-features = ["ssh_client"]

# 💡 Examples - Node

[[example]]
name = "media_renderer"
path = "examples/ui/media_renderer.rs"
required-features = ["ui"]
[[example]]
name = "style"
path = "examples/ui/style.rs"
required-features = ["http_server", "style"]

[[example]]
name = "pretty_curl"
path = "examples/ui/pretty_curl.rs"
required-features = ["_pretty_curl"]

[[example]]
name = "state"
path = "examples/ui/state.rs"
required-features = ["tui"]

[[example]]
name = "bsx_rsx_match"
path = "examples/ui/bsx_rsx_match.rs"
required-features = ["template"]

[[example]]
name = "bsx_bindings"
path = "examples/ui/bsx_bindings.rs"
required-features = ["template"]

[[example]]
name = "crud"
path = "examples/ui/crud.rs"
required-features = ["ui", "action"]

[[example]]
name = "todo"
path = "examples/todo/todo.rs"
required-features = ["router", "json"]

[[example]]
name = "syntax_highlighting"
path = "examples/ui/syntax_highlighting.rs"
required-features = ["syntax_highlighting", "markdown"]

# 💡 Examples - Router

[[example]]
name = "mini_browser"
path = "examples/router/mini_browser.rs"
required-features = ["_mini_browser","action"]

[[example]]
name = "router"
path = "examples/router/router.rs"
required-features = ["router", "markdown"]

[[example]]
name = "cli"
path = "examples/router/cli.rs"
required-features = ["router", "rhai_serde"]

[[example]]
name = "router_serde"
path = "examples/router/router_serde.rs"
required-features = ["router", "rhai_serde", "template_serde"]

# 💡 Examples - action

[[example]]
name = "hello_world"
path = "examples/action/hello_world.rs"
required-features = ["action"]

[[example]]
name = "scripting"
path = "examples/action/scripting.rs"
required-features = ["rhai_serde"]

[[example]]
name = "behavior_tree"
path = "examples/action/behavior_tree.rs"
required-features = ["action"]

[[example]]
name = "simple_action"
path = "examples/action/simple_action.rs"
required-features = ["action"]

[[example]]
name = "long_running"
path = "examples/action/long_running.rs"
required-features = ["action"]

[[example]]
name = "repeat_while"
path = "examples/action/repeat_while.rs"
required-features = ["action"]

[[example]]
name = "state_machine"
path = "examples/action/state_machine.rs"
required-features = ["action"]

[[example]]
name = "utility_ai"
path = "examples/action/utility_ai.rs"
required-features = ["action"]

[[example]]
name = "malenia"
path = "examples/action/malenia.rs"
required-features = ["action", "rand"]

# 💡 Benches

[[test]]
name = "thread_scenes"
path = "tests/thread_scenes.rs"
harness = false
required-features = ["thread", "router", "fs", "testing"]

# The no-code `examples/bsx_site` example, loaded on-disk and rendered/navigated
# through `beet`'s public API. The example is pure `.bsx`/`.md` (not a crate); its
# render + live-tui suites live here, run via `beet --main=examples/bsx_site/main.bsx`.
[[test]]
name = "bsx_site"
path = "tests/bsx_site.rs"
harness = false
required-features = ["router", "style", "markdown", "fs", "http_server", "testing"]

[[test]]
name = "bsx_site_tui"
path = "tests/bsx_site_tui.rs"
harness = false
required-features = ["router", "style", "markdown", "fs", "tui_server", "testing"]

[[bench]]
name = "bevy_coldstart"
path = "tests/benches/bevy_coldstart.rs"
harness = false

[[bench]]
name = "assert"
path = "tests/benches/assert.rs"
harness = false

[[bench]]
name = "control_flow_patterns"
path = "tests/benches/control_flow_patterns.rs"
harness = false

[[bench]]
name = "entity_spawn"
path = "tests/benches/entity_spawn.rs"
harness = false

[[bench]]
name = "server_bench"
path = "tests/benches/beet_net/server_bench.rs"
harness = false

[[bench]]
name = "bench_observer_global"
path = "tests/benches/bench_observer_global.rs"
harness = false

[[bench]]
name = "bench_observer_local"
path = "tests/benches/bench_observer_local.rs"
harness = false
