[package]
name = "beet_examples"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
beet.workspace = true
bevy = { workspace = true, default-features = true }
log.workspace = true
pretty_env_logger.workspace = true
forky_bevy.workspace = true
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5"
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ['Document', 'Element', 'Window']

[dev-dependencies]
anyhow.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio.workspace = true
