[package]
name = "beet_examples"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
beet.workspace = true
bevy = { workspace = true, default-features = true }
log.workspace = true
pretty_env_logger.workspace = true
forky_bevy.workspace = true
rand.workspace = true
flume.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[dev-dependencies]
anyhow.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio.workspace = true
