[package]
name = "beet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description = "Tools for building and deploying beet apps"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
[[bin]]
name = "beet"
path = "src/main.rs"

[features]
default = ["qrcode", "net", "tui", "ssh"]
qrcode = ["dep:qrcode", "dep:image"]
# HTTP transport for the remote scene-control commands. Native-only: the
# ureq/rustls stack does not build on wasm, so it is enabled via the non-wasm
# target table below rather than wired into this feature directly.
net = ["beet/ureq","beet/rustls-tls"]
# The live terminal target for `beet present`: the navigable charcell host and
# the markup-declarable `TuiServer` (`beet/tui_server` pulls `beet_router/tui`,
# which registers it). On by default so a bare `beet present` boots the deck.
tui = ["beet/tui_server"]
# The multi-tenant SSH-TUI server (`SshTuiServer`), so `beet serve <site>
# --server=http,ssh` serves http and an ssh terminal from one process. Registers
# the markup-declarable `SshTuiServer` via `SshTuiPlugin`.
ssh = ["tui", "beet/ssh_tui"]
# S3-backed stores, so a deployed `beet serve` task loads its site (`main.bsx`,
# `routes/`, `templates/`) from an S3 bucket instead of the local filesystem,
# selected at runtime by `BEET_SERVICE_ACCESS=remote`. Adds no deploy/terraform
# machinery, keeping the container binary lean.
aws_sdk = ["beet/aws_sdk"]

[dependencies]
beet = { workspace = true, features = [
	"router",
	"fs",
	"infra",
	"json",
	"webdriver",
	"template_serde",
	# the `serve` command spawns and serves a no-code BSX site
	"http_server",
	# `beet serve --watch`: dev-mode live reload over the client_io channel
	"client_io",
	"markdown",
	# fenced code blocks in served/presented decks render highlighted
	"syntax_highlighting",
	"style",
	"template",
	# the QuickJS scripting runtime: the `StartScript` load verb's `console.log`
	# path and the `ExchangeScript` route backend a `main.bsx` wires.
	"quickjs_serde",
	# plaintext `MediaType::Text` serialization, so a scripted route's `String`
	# output streams raw (`result: 7`) instead of JSON-quoted under the cli accept.
	"serde_plain",
] }
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
beet = { workspace = true, features = ["testing"] }

# the `beet` test runner replaces libtest's harness
[lib]
harness = false
