[package]
name = "beet"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
beet_core.workspace = true
beet_ecs.workspace = true
# beet_net.workspace = true

bevy.workspace = true
