[package]
name = "beet"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["ml"]
ml = ["dep:beet_ml"]
net = ["dep:beet_net"]

[dependencies]
beet_core.workspace = true
beet_ecs.workspace = true
beet_ml = { workspace = true, optional = true }
beet_net = { workspace = true, optional = true }

# bevy.workspace = true

[dev-dependencies]
bevy = { workspace = true, default-features = true }
log.workspace = true
pretty_env_logger.workspace = true
forky_bevy.workspace = true
# bevy-inspector-egui = "0.24.0"
